[package]
name = "vdaf-rejection-sampling-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
keccak = { version = "0.1.3", features = ["asm"] }
prio = { version = "0.10.0", git = "https://github.com/divviup/libprio-rs", rev = "8136c3e776ee09be9001a8b4a2c49aba65159a9c" }
rand = "0.8.5"
