[package]
name = "vdaf-rejection-sampling-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
keccak = { version = "0.1.3", features = ["asm"] }
prio = { git = "https://github.com/divviup/libprio-rs", rev = "14e0f39fa672d29fd7d03c81d5086a4b1729b116" }
rand = "0.8.5"
